--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 			</div>
 
 			<section class="time_section">
+				<h1 class="align_center">Нет кнопок для перехода на сайт или они не работают</h1>
+				<div class="index_description">
+					Напишите <a href="https://t.me/adm_liveball">админу в телеграм (@adm_liveball)</a> с текстом: "Не работают кнопки для перехода на сайт" и приложите скриншот. Мы исправим данную проблему в кратчайшие сроки.
+				</div>
+			</section>
+			
+			<section class="time_section">
 				<h1 class="align_center">Трансляции
 					футбола онлайн</h1>
 				<div class="index_description">Давно искали где посмотреть матч любимой команды, но везде попадаются
