--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
 		content="Смотреть футбол онлайн бесплатно и в хорошем качестве. Спортивные онлайн трансляции, матчи АПЛ, Премьер Лиги, Лиги Чемпионов, Лиги Европы, РПЛ, испанской Примеры, Серии А, Лиги 1. Футбол в высоком качестве и онлайн результаты на LiveBall.ru">
-	<title>LiveBall - Мы там, где футбол</title>
+	<title>Рабочее зеркало LiveBall</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="/style.css">
 	<link rel="stylesheet" type="text/css" href="/dark.css">
