--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="index_lcol">
 
 					<section class="time_section">
-						<h1 class="align_center">Актуальные ссылки</h1>
+						<h1 class="align_center">Актуальные ссылки (рабочее зеркало LiveBall)</h1>
 						<div class="live align_center" id="links">
 							
 						</div>
@@ -65,16 +65,16 @@
 				<h1 class="align_center">Трансляции
 					футбола онлайн</h1>
 				<div class="index_description">Давно искали где посмотреть матч любимой команды, но везде попадаются
-					нерабочие или тормозящие трансляции? На нашем сайте вы сможете сделать это с комфортом. Вам не нужно
+					нерабочие или тормозящие трансляции? На нашем сайте вы сможете с комфортом смотреть матчи в России, Казахстане, Украине, Беларуси, Узбекистане, Таджикистане, Турции, Кыргызстане, Молдове, Азербайджане, Армении. Вам не нужно
 					нервничать, когда показ матча завис в самый неподходящий момент. Мы предлагаем вам: <br>
 
 					<ul>
 						<li>Просмотр футбола <b>совершенно бесплатно!</b> Вам не нужно платить деньги за трансляции
 							любимой игры.</li>
 						<li>Показ всех <b>Топ 5 Лиг</b> (испанская Примера, английская Премьер Лига, итальянская Серия
-							А, немецкая Бундеслига и французская Лига 1), а также Кубок Германии + конечно же
+							А, немецкая Бундеслига и французская Лига 1), а также Кубок Германии, Кубок Англии, Кубок Франции, Кубок Италии, Кубок Испании + конечно же
 							<b>российская Премьер Лига.</b> А также важнейших европейских турниров: <b>Лига Чемпионов,
-								Лига Европы, Чемпионат Мира, ЕВРО и Лига Наций.</b></li>
+								Лига Европы, Лига Конференций, Чемпионат Мира, ЕВРО и Лига Наций.</b></li>
 						<li><b>Отличное качество</b> просмотра! Как любители футбола, мы понимаем, насколько важна
 							каждая секунда матча. При создании этого сайта, нашей главной целью было обеспечить
 							качественный просмотр футбола.</li>
